[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/Pausemenu.gd" type="Script" id=1]
[ext_resource path="res://Tiles/button-sword-64.png" type="Texture" id=2]

[node name="Control" type="Control"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0862745, 0.0862745, 0.0862745, 0.733333 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
pause_mode = 2
margin_left = 304.0
margin_top = 179.0
margin_right = 739.0
margin_bottom = 384.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 25.0
margin_right = 435.0
margin_bottom = 39.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Pause menu"
align = 1

[node name="resumeB" type="Button" parent="VBoxContainer"]
margin_top = 69.0
margin_right = 435.0
margin_bottom = 135.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Resume"

[node name="QuitB" type="Button" parent="VBoxContainer"]
margin_top = 139.0
margin_right = 435.0
margin_bottom = 205.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Quit"

[node name="Button-sword-1" type="Sprite" parent="."]
visible = false
position = Vector2( 786, 278 )
rotation = -0.785397
scale = Vector2( 0.628906, 0.648438 )
texture = ExtResource( 2 )

[node name="Button-sword-2" type="Sprite" parent="."]
visible = false
position = Vector2( 787, 347 )
rotation = -0.785397
scale = Vector2( 0.628906, 0.648438 )
texture = ExtResource( 2 )

[connection signal="focus_entered" from="VBoxContainer/resumeB" to="." method="_on_resumeB_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/resumeB" to="." method="_on_resumeB_focus_exited"]
[connection signal="mouse_entered" from="VBoxContainer/resumeB" to="." method="_on_resumeB_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/resumeB" to="." method="_on_resumeB_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/resumeB" to="." method="_on_resumeB_pressed"]
[connection signal="focus_entered" from="VBoxContainer/QuitB" to="." method="_on_QuitB_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/QuitB" to="." method="_on_QuitB_focus_exited"]
[connection signal="mouse_entered" from="VBoxContainer/QuitB" to="." method="_on_QuitB_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/QuitB" to="." method="_on_QuitB_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/QuitB" to="." method="_on_QuitB_pressed"]
